2010-11-23	lav

	* loadsave.cc: check for mmap_len overflow.
	* edit.h: fix BufferSize and GapSize types.

2010-11-08	lav

	* keymap.h, keymap.cc, keymapfn.cc, edit.h, ext.cc: (expand-tab-spans) add new function.

2010-03-21	lav

	* options.cc: make fx,fy local (fixes a glitch in nested option dialogs).
	* options.cc: clear message after saving options.
	* user.cc, loadsave.cc, edit.h: allow ranges with mmap (file:off:len).
	* chset.cc: don't use iswprint (buggy), assume all high wchars are printable.
	* about.cc: update copyright.

2009-12-12	lav

	* keymap.cc: limit mouse flush loop (workaround for ncurses bug).

2009-12-12	Raphael Geissert <geissert@debian.org>

	* options.cc: fixed compilation with gcc-4.4.
	* edit.cc: fixed type for btowc return value.

2009-07-10	Raphael Geissert <atomo64@gmail.com>

	* edit.cc: fix a typo.

2009-05-25  lav

	* inline.h, format.cc: fixed auto word wrap.

2009-05-22  lav

	* color.h, color.cc, options.cc: add SYNTAX5, SYNTAX6.

2009-05-19  lav

	* highli.cc: don't interpret \b

2009-05-18  lav

	* screen.cc, color.h: fixes for syntax4.
	* color.cc: fixed default syntax4 color.

2009-05-15  lav

	* highli.cc: handle s without a subex number.
	* color.cc, color.h, options.cc: add syntax4 color.

2008-12-25  lav

	* highli.cc: fixed free_chain; handle \r; ignore s-lines in ignored sections.

2008-12-22  lav

	* highli.cc, highli.h: add support for sub-text highlighting;
	  ignore spaces after trailing \ so that nice indentation is possible.

2008-10-25  lav

	* window.cc, window.h: add clip_x member; limit PutStr on it.

2008-10-24  lav

	* highli.cc, highli.h, user.cc: save and show syntax selector line.

2008-09-20  lav

	* loadsave.cc: set DosEol properly.
	* highli.cc: limit max text length to highlight; use the same
	  re_syntax_options for file type mapping.

2008-09-02  lav

	* calc.cc: add sum function.
	* inline.h, kern.cc, edit.h, textpoin.cc, textpoin.h: outline some
	  functions as suggested by gcc.